asciidoctor.gradle: fix warning with JDK16+